# DailyLoopPY_Backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  start-backend.sh  start-polling-worker.sh  start-services.sh
backend/api_gateway/: api_gateway.py
backend/api_gateway/routes/: auth.py  bookmark.py  health.py  news.py  story_tracking.py  summarize.py  user.py
backend/api_gateway/utils/: auth.py
backend/core/: config.py  supabase_client.py  utils.py
backend/data/: story_tracking_schema.sql
backend/microservices/: New_API_Test.ipynb  ingestion_service.py  news_fetcher.py  news_storage.py  perplexity_api.py  polling_worker.py  story_tracking_service.py  summarization_service.py
backend/microservices/data_services/: __init__.py  news_fetcher.py
backend/microservices/storage/: __init__.py  bookmark_service.py  search_logger.py
backend/microservices/story_tracking/: article_matcher.py  article_retriever.py  polling_service.py  story_manager.py
backend/microservices/summarization/: article_processor.py  content_fetcher.py  keyword_extractor.py  summarization_utils.py
docs/: architecture.md  story-tracking-documentation.md
