[project]
name = "daily-loop"
version = "0.0.1"
description = "A news aggregator that collects, summarizes, and tracks evolving stories"
requires-python = ">=3.10"
dependencies = [
    # Ingestion & Processing
    "requests",
    "beautifulsoup4",
    "feedparser",
    "aiohttp",

    # Transformer
    "torch",

    # Summarization & Clustering
    "numpy",
    "scikit-learn",
    "google-genai",
    "yake",
    "nltk",

    # Backend & API
    "Flask",
    "flask-socketio",
    "python-dotenv",
    "flask-cors==4.0.0",
    "gunicorn==21.2.0",
    "pydantic",
    "tenacity",
    "loguru",
    "PyJWT==2.8.0",
    "flask-restx",

    # Caching & Storage
    "redis",
    "supabase>=2.0.0",

    # Scheduling & Background Tasks
    "schedule",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
